# lingo_reason

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  run.py
config/: models.yaml  providers.yaml  tasks.yaml
scripts/: cache_datasets.py  serve.sh  serve_slurm.sh
src/: eval.py  tasks.py  utils.py
src/api/: __init__.py  base.py  base_provider.py  cohere_provider.py  gemini.py  gemini_provider.py  gpt_oss_provider.py  openai.py  openai_provider.py  together.py  together_provider.py
