[project]
name = "lingo-reason"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.20.7",
    "datasets>=2.0,<3.0",
    "f>=0.0.1",
    "google-genai>=1.68.0",
    "hf>=1.8.0",
    "huggingface-hub[cli]>=1.8.0",
    "iso639>=0.1.4",
    "litellm>=1.82.6",
    "math-verify>=0.9.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sacrebleu>=2.6.0",
    "together>=2.5.0",
    "tqdm>=4.67.3",
]
